--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-nprogress": "^2.0.7",
     "gatsby-plugin-offline": "^3.0.14",
     "gatsby-plugin-react-helmet": "^3.0.2",
+    "gatsby-plugin-sass": "^4.2.0",
     "gatsby-plugin-sharp": "^2.2.13",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
@@ -26,9 +27,12 @@
     "prop-types": "^15.6.2",
     "react": "^16.11.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-awesome-button": "^6.5.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.11.0",
     "react-google-recaptcha": "^1.0.5",
     "react-helmet": "^5.2.0",
+    "sass": "^1.32.8",
     "styled-components": "^4.1.3",
     "yup": "^0.26.6"
   },
